웹폰트 적용 범위 수정

--- a/src/css/index.css
+++ b/src/css/index.css
@@ -2,9 +2,10 @@
 * {
     margin: 0;
     padding: 0;
+}
+.mainWrap{
     font-family: 'Nanum Gothic Coding', monospace;
 }
-
 .app {
     flex: 1;
     flex-direction: column;
